# BibbleC

./: .gitignore  CMakeLists.txt  README.md
compiler/: CMakeLists.txt
compiler/include/BibbleC/: compiler.h  module.h
compiler/src/: compiler.cpp
examples/: minimal.bibl
framework/: CMakeLists.txt
framework/include/BibbleC/debug/: source_pair.h
framework/include/BibbleC/diagnostic/: diagnostic.h  diagnostics.h
framework/include/BibbleC/lexer/: .gitignore
framework/include/BibbleC/parser/: parser.h
framework/include/BibbleC/parser/ast/: node.h
framework/include/BibbleC/parser/ast/expression/: binary_expression.h  boolean_literal.h  cast_expression.h  integer_literal.h  unary_expression.h  variable_expression.h
framework/include/BibbleC/parser/ast/global/: function.h
framework/include/BibbleC/parser/ast/statement/: return_statement.h  variable_declaration.h
framework/include/BibbleC/scope/: scope.h  symbol.h
framework/include/BibbleC/type/: auto_type.h  boolean_type.h  error_type.h  function_type.h  integer_type.h  type.h  void_type.h
framework/include/BibbleC/util/: better_strings.h
framework/src/diagnostic/: diagnostic.cpp  diagnostics.cpp
framework/src/lexer/: .gitignore  lexer.vlex
framework/src/parser/: parser.cpp
framework/src/parser/ast/: node.cpp
framework/src/parser/ast/expression/: binary_expression.cpp  boolean_literal.cpp  cast_expression.cpp  integer_literal.cpp  unary_expression.cpp  variable_expression.cpp
framework/src/parser/ast/global/: function.cpp
framework/src/parser/ast/statement/: return_statement.cpp  variable_declaration.cpp
framework/src/scope/: scope.cpp  symbol.cpp
framework/src/type/: auto_type.cpp  boolean_type.cpp  error_type.cpp  function_type.cpp  integer_type.cpp  type.cpp  void_type.cpp
main/: CMakeLists.txt
main/src/: main.cpp
